<resources>
    <string name="app_name">FoodStorageApp</string>
    <string name="create_user_account">Create your account here</string>
    <string name="pwd_entry_hint">Enter password</string>
    <string name="pwd_requirements">minimum 6 characters</string>
    <string name="email_entry_hint">Enter your email address</string>
    <string name="confirm_pwd_entry_hint">Confirm password</string>
    <string name="create_acct_btn">Create Account</string>
    <string name="action_settings">Settings</string>
    <string name="editTextFoodName">Food Name</string>
    <string name="editTextNumberUnitSize">1</string>
    <string name="editTextUnits">oz</string>
    <string name="editTextNumberToAdd">1</string>
    <string name="editTextStorageMedium">canned, dry</string>
    <string name="editTextDateStored">today</string>
    <string name="editTextNumberShelfLifeInMonths">36</string>
    <string name="editTextFoodType">vegetables</string>
    <string-array name="monthYear">
        <item>Years</item>
        <item>Months</item>
    </string-array>
    <string-array name="possibleUnits">
        <item>oz</item>
        <item>lb</item>
        <item>fl oz</item>
        <item>qt</item>
        <item>gal</item>
        <item>whole</item>

        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
    </string-array>
    <string name="notification_details">Show Notification Details Here…</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_prompt">Login to Your Account</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Enter Item</string>
    <string name="menu_slideshow">Inventory List</string>
</resources>